static/style.less
.nodebb-plugin-medals.medal-container {
    margin-right: 5px;
    position: relative;
    display: inline-block;
    --xs-size: 20px;
    --sm-size: 35px;
    --md-size: 50px;
    --lg-size: 75px;
    --xl-size: 100px;

    .medal {
        background-color: #000;
        color: #fff;
        border: none;
        border-radius: 50%;
        display: inline-flex;
        justify-content: center;
        align-content: center;
        flex-direction: column;
        text-align: center;
        width: var(--sm-size);
        height: var(--sm-size);
        font-size: calc(var(--sm-size) / 2);

        &.xs {
            width: var(--xs-size);
            height: var(--xs-size);
            font-size: calc(var(--xs-size) / 2);
        }

        &.sm {
            width: var(--sm-size);
            height: var(--sm-size);
            font-size: calc(var(--sm-size) / 2);
        }

        &.md {
            width: var(--md-size);
            height: var(--md-size);
            font-size: calc(var(--md-size) / 2);
        }

        &.lg {
            width: var(--lg-size);
            height: var(--lg-size);
            font-size: calc(var(--lg-size) / 2);
        }

        &.xl {
            width: var(--xl-size);
            height: var(--xl-size);
            font-size: calc(var(--xl-size) / 2);
        }
    }
}

.page-user-medals {
    .is-admin {
        .medal-container {
            cursor: move;
        }
    }

    .medals-row {
        display: flex;
        flex-direction: row;
        flex-wrap: wrap;

        &#unassigned,
        &#assigned {
            min-height: 200px;
            border: 3px dashed transparent;
            border-radius: 20px;
            transition: border ease-in-out 200ms, background-color ease-in-out 200ms;
            padding: 15px;

            &.active {
                border-color: lightgray;
            }

            &.hover {
                background-color: whitesmoke;
            }
        }
    }

    .nodebb-plugin-medals.medal-container {
        text-align: center;
        margin-right: 0;
        margin-top: 20px;
        position: relative;
        transition: background-color ease-in-out 150ms, box-shadow ease-in-out 150ms;
        padding: 10px;
        border-radius: 10px;

        &.dragging {
            background-color: #fff;
            box-shadow: rgba(6, 24, 44, 0.4) 0px 0px 0px 2px, rgba(6, 24, 44, 0.65) 0px 4px 6px -1px, rgba(255, 255, 255, 0.08) 0px 1px 0px inset;
        }

        .name {}
    }
}


.page-admin-medals {
    .medal-icon {
        background-color: #000;
        color: #fff;
        border: none;
        border-radius: 50%;
        width: 50px;
        height: 50px;
        font-size: 25px;
        display: inline-flex;
        justify-content: center;
        align-content: center;
        flex-direction: column;
        text-align: center;
        cursor: pointer;
    }

    .info-table {
        width: 100%;

        tr {
            td {
                padding-bottom: 10px;

                textarea,
                input {
                    width: 100%;
                }

                label {
                    padding-right: 10px;
                }
            }
        }
    }

    .icon-color-table {
        text-align: center;

        thead {
            th {
                padding-right: 25px;
            }
        }

        td {
            padding-right: 15px;
        }

        [type="color"] {
            height: 50px;
        }
    }

    .btn {
        .fa {
            pointer-events: none;
        }
    }
}

